are we ready for biomes?

--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -3,6 +3,8 @@ short_name: F1.1 Perm upland streams
 name: F1.1 Permanent upland streams
 biome: F1 Rivers and streams
 realm: Freshwater
+url: Ecosystem-profiles-comments/EFGs/F1.1.html
+biomeurl: Ecosystem-profiles-comments/Biomes/F1.html
 contributors: RT Kingsford / R Mac Nally / DA Keith
 ---
 
