fine tuning index and 404

--- a/404.md
+++ b/404.md
@@ -1,4 +1,7 @@
+---
+permalink: /404.html
+---
 
-**Oh no, wrong path!**
+# **Oh no, wrong path!**
 
-Please start again from the beginning
+Please start again from the beginning.
