--- a/_Biomes/F1.md
+++ b/_Biomes/F1.md
@@ -1,7 +1,7 @@
 ---
 name: F1 Rivers and streams
 realm: Freshwater
-url: Ecosystem-profiles-comments/Biomes/F1.html
+code: F1
 contributors: DA Keith
 ---
 
