--- a/_EFGs/F2.3.md
+++ b/_EFGs/F2.3.md
@@ -1,11 +1,10 @@
 ---
-short_name: F2.3 Seasonal lakes
 name: F2.3 Seasonal freshwater lakes
 biome: F2 Lakes
 realm: Freshwater
 code: F2.3
 biomecode: F2
-contributors: RT KingsfordR Mac NallyDA Keith
+contributors: RT Kingsford / R Mac Nally / DA Keith
 ---
 
 # Ecological traits
@@ -21,7 +20,12 @@ Annual filling and drying is driven by seasonal rainfall and flows and seasonall
 Mainly in sub-humid temperate and wet/dry tropical regions, in monsoonal and Mediterranean-type climates, but usually not semi-arid or arid regions.
 
 ## Map details
+
+Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+
 ## References
 ### Text references
+* Keeley JE, Zedler PH (1998) Characterization and global distribution of vernal pools. In: Ecology, conservation and management of vernal pool ecosystems (Eds ET Bauder et al.). California Native Plant Society, Sacramento. / Rains MC, Fogg GE, Harter T, Dahlgren RA, Williamson RJ (2006). The role of perched aquifers in hydrological connectivity and biogeochemical processes in vernal pool landscapes, Central Valley, California. Hydrological Processes 20: 1157-1175.
 ### Map References
+* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
 
