--- a/_EFGs/F2.6.md
+++ b/_EFGs/F2.6.md
@@ -1,11 +1,10 @@
 ---
-short_name: F2.6 Perm salt lakes
-name: F2.6 Permanent inland salt lakes
+name: F2.6 Permanent inland salt lakes / F2.6 Permanent salt lakes
 biome: F2 Lakes
 realm: Freshwater
 code: F2.6
 biomecode: F2
-contributors: RT KingsfordDA Keith
+contributors: RT Kingsford / DA Keith
 ---
 
 # Ecological traits
@@ -21,34 +20,12 @@ Permanent salt lakes tend to be large and restricted to semi-arid climates with 
 Mostly in semi-arid regions of Africa, Australia, Eurasia and western parts of North and South America.
 
 ## Map details
+
+Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+
 ## References
 ### Text references
+* Humayoun SB, Bano N, Hollibaugh JT (2003) Depth distribution of microbial diversity in Mono Lake, a meromictic soda lake in California. Applied and environmental microbiology 69:1030-1042. / Williams WD (1998) Salinity as a determinant of the structure of biological communities in salt lakes. Hydrobiologia 381:191-201.
 ### Map References
-
- ---
-short_name: F2.6 Perm salt lakes
-name: F2.6 Permanent salt lakes
-biome: F2 Lakes
-realm: Freshwater
-code: F2.6
-biomecode: F2
-contributors: RT KingsfordDA Keith
----
-
-# Ecological traits
-
-Permanent salt or soda lakes have waters with periodically or permanently high sodium chloride concentrations. Unlike hypersaline lakes, productivity is not greatly suppressed and autotrophs may be abundant, including phytoplankton, cyanobacteria, of green algae and submerged and emergent macrophytes. These, supplemented by allochthonous energy and carbon inputs from lake catchments, support relatively simple trophic networks, characterised by few species in high abundance and some regional endemism. The high biomass of archaeal and bacterial decomposers and phytoplankton, in turn support abundant consumers including brine shrimps, copepods, insects and other invertebrates, fish and waterbirds (e.g. flamingos). Predators and herbivores that become dominant at low salinity levels exert top-down control on algae and low-order consumers. Species niches are strongly structured by spatial and temporal salinity gradients. Species in the most saline conditions tend to have broader ranges of salinity tolerance. Increasing salinity generally reduces diversity and the importance of top-down trophic regulation, but not necessarily abundance of organisms, except at hypersaline levels. Many organisms tolerate high levels of salinity through osmotic regulation, which has a high metabolic cost, limiting productivity and competitive ability with freshwater biota.
-
-# Key-ecological-drivers
-
-Permanent salt lakes tend to be large and restricted to semi-arid climates with high evaporation, but with reliable inflow sources (e.g. snowmelt). They may be thousands of hectares in size and several metres deep. A few are much larger and deeper (e.g. Caspian Sea). Endorheic geomorphology promotes salt accumulation, but lake volume and reliable water inputs are critical to buffering salinity below extreme levels. Salinity nonetheless varies temporally upwards from 0.3%, rarely more than 10%, depending on lake size, temperature and the balance between freshwater inflows, precipitation and evaporation. Inflow is critical to ecosystem dynamics, partly by driving indirect effects of salinity on trophic or engineering processes. Salinity also varies between lakes due to differences in substrate and inflow. Within lakes, salt concentrations may be vertically stratified (meromictic) due to higher density of saltwater than freshwater inflow and slow mixing. Dissolved oxygen is inversely related to salinity, hence anoxia is common at depth in meromictic lakes. Ionic composition varies greatly, with carbonate, sulphate, sulphide, ammonia and/or phosphorus sometimes reaching high levels, and pH varying from 3 to 11.
-
-# Distribution
-
-Mostly in semi-arid regions of Africa, Australia, Eurasia and western parts of North and South America.
-
-## Map details
-## References
-### Text references
-### Map References
+* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
 
