--- a/_EFGs/F2.8.md
+++ b/_EFGs/F2.8.md
@@ -1,11 +1,10 @@
 ---
-short_name: F2.8 Artesian springs/oases
 name: F2.8 Artesian springs and oases
 biome: F2 Lakes
 realm: Freshwater
 code: F2.8
 biomecode: F2
-contributors: DJ RouxRT KingsfordDA Keith
+contributors: DJ Roux / RT Kingsford / DA Keith
 ---
 
 # Ecological traits
@@ -21,7 +20,12 @@ Flow of artesian water to the surface is critical to these wetlands, which recei
 Scattered through arid regions in southern Africa, the Sahara and Middle East, central Eurasia, southwest of North America and Australia’s Great Artesian Basin.
 
 ## Map details
+
+Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+
 ## References
 ### Text references
+* Patten DT, Rouse L, Stromberg JC (2008) Isolated spring wetlands in the Great Basin and Mojave Deserts, USA: potential response of vegetation to groundwater withdrawal. Environmental Management 41: 398-413. / Worthington Wilmer J, Elkin C, Wilcox C, Murray L, Niejalke D, Possingham H (2008) The influence of multiple dispersal mechanisms and landscape structure on population clustering and connectivity in fragmented artesian spring snail populations. Molecular Ecology 17: 3733-3751.
 ### Map References
+* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
 
