--- a/_EFGs/F2.4.md
+++ b/_EFGs/F2.4.md
@@ -1,11 +1,10 @@
 ---
-short_name: F2.4 Freeze-thaw lakes
 name: F2.4 Freeze-thaw freshwater lakes
 biome: F2 Lakes
 realm: Freshwater
 code: F2.4
 biomecode: F2
-contributors: RT KingsfordLJ JacksonDA Keith
+contributors: RT Kingsford / LJ Jackson / DA Keith
 ---
 
 # Ecological traits
@@ -21,7 +20,12 @@ Seasonal freeze-thaw cycles generate typically dimictic temperature stratificati
 Predominantly across the high latitude northern hemisphere and high altitude South America.
 
 ## Map details
+
+Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
+
 ## References
 ### Text references
+* Adrian R, Walz N, Hintze, T, Hoeg S, Rusche R (1999) Effects of ice duration on plankton succession during spring in a shallow polymictic lake. Freshwater Biology 41: 621-634. / Bertilsson S, Burgin A, Carey CC, Fey SB, Grossart H, Grubisic LM, Jones ID, Kirillin G, Lennon JT, Shade A, Smyth RL (2013) The under-ice microbiome of seasonally frozen lakes. Limnology Oceanography 58: 1998–2012.
 ### Map References
+* Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
 
