Marine,subterranean biomes

--- a/_Biomes/F1.md
+++ b/_Biomes/F1.md
@@ -1,10 +1,10 @@
 ---
-name: F1 Rivers and streams
+name: F1. Rivers and streams biome
 realm: Freshwater
 code: F1
 contributors: DA Keith
 ---
 
-# Ecological traits
+# Description
+ The rivers and streams biome includes lotic ecosystems throughout the world, flowing from elevated uplands to deltas, estuaries or lakes. They are defined primarily by their linear structure, size and flow regimes. Flow regimes depend on rainfall patterns in the stream catchment, which vary from year round to seasonal to episodic, as well as the position of a stream reach within a catchment. Stream gradient determines flow velocity, variability and turbulence, differentiating ecosystems and species’ traits between upland and lowland systems. Productivity tends to increase from upland to lowland areas, and is driven primarily by allochthonous sources from terrestrial ecosystems (e.g. forests) in upper catchments but autochthonous energy synthesis by phytoplankton and periphyton may be significant. Erosion and depositional processes also depend on the gradient and position of the stream reach and are fundamental to the passage of nutrients and inorganic matter downstream. Some rivers with extensive peatlands in their catchments are rich in tannins, which reduce light penetration through the water column, increase acidity, promote microbial activity that thrive on dissolved organic carbon, and thereby reduce oxygen levels and productivity. In cold climates, stream surfaces freeze over in winter, imposing seasonal constraints on productivity and movement of organisms. Trophic webs tend to become more complex with river size, due to increased resource availability and niche diversity. Invertebrate detritivores consume fragments of organic matter, providing resources for macro-invertebrates, fish, waterbirds, reptiles and some mammals.  Specialised species-level traits are associated with different flow regimes. For example, suspension feeding is common in high flow velocities, cold tolerance and seasonal dormancy occurs in freeze/thaw streams, and desiccation tolerance and dormant life stages dominate episodic rivers.
 
-Here comes a summary
