--- a/_Biomes/T1.md
+++ b/_Biomes/T1.md
@@ -1,10 +1,10 @@
 ---
-name: T1 Forest
+name: T1. Tropical-subtropical forests biome
 realm: Terrestrial
 code: T1
 contributors: DA Keith
 ---
 
-# Ecological traits
+# Description
+ The tropical-subtropical forests biome includes moderate to very highly productive ecosystems with closed tree canopies occurring primarily at lower latitudes north and south of the equator. High primary productivity is underpinned by high insolation, warm temperatures, relatively low seasonal variation in day length and temperature and strong water surpluses associated with the intertropical convergence zone (ICZ), extending to wetter parts of the seasonal tropics and subtropics. Productivity and biomass vary in response to: i) strong rainfall gradients associated with seasonal migration of the ICZ, ii) altitudinal gradients in precipitation, cloud cover and temperatures; and iii) edaphic gradients that influence availability of soil nutrients. Species diversity and the complexity of both vegetation and trophic structures are positively correlated with standing biomass and primary productivity, however, trophic webs and other ecosystem processes are strongly regulated from the bottom-up by the dominant photoautotrophs (trees), which fix abundant energy and carbon, engineer habitats of many other organisms, and underpin feedbacks related to nutrient and water cycling  and regional climate. Complex nutrient cycling and/or sequestering mechanisms are common, countering the high potential for soil nutrient leaching due to high rainfall. Plant species exhibit leaf plasticity, shade tolerance and gap-phase dynamics in response to periodic opening of canopy gaps initiated by tree death, storm damage and lightning strikes. Biogeographic legacies result in strong compositional distinctions, and consequently some functional differences, among land masses within the biome.
 
-Here comes a summary
