--- a/_EFGs/M3.2.md
+++ b/_EFGs/M3.2.md
@@ -1,5 +1,5 @@
 ---
-name: M3.2 Marine canyons / M3.2 Submarine canyons
+name: M3.2 Submarine canyons
 biome: M3 Deep sea floors
 realm: Marine
 code: M3.2
@@ -9,15 +9,15 @@ contributors: UC Fernandez-Arcaya / E Ramirez-Llodra / DA Keith
 
 # Ecological traits
 
-Submarine canyons are major geomorphic features that function as dynamic flux routes for resources between continental shelves and ocean basins. As a result, canyons are one of the most productive and biodiverse habitats in the deep sea. Habitat heterogeneity and temporal variability are key features of submarine canyons, with the diversity of topographic and hydrodynamic features and substrate types (mud, sand, rocky walls) within and between canyons contributing to their highly diverse heterotrophic faunal assemblages. Photautotrophs are present only at the heads of some canyons. Canyons are characterized by meio-, macro- and mega-fauna assemblages with greater abundances and/or biomass than adjacent continental slopes (M3.1), due mainly to greater quality and quantity of food inside canyon systems. Habitat complexity and high resource availability make canyons important refuges, nurseries, spawning areas and regional source populations for fish, crustaceans and other benthic biota. Steep exposed rock and strong currents may facilitate development of dense communities of sessile predators and filter feeders such as cold-water corals and sponges, engineering complex three-dimensional habitats. Soft substrata favour high densities of pennatulids and detritivores such as echinoderms. The role of canyons as carbon depocentres makes them an extraordinary habitat for deep-sea deposit feeders, which represent the dominant mobile benthic trophic guild. The high productivity attracts pelagic-associated secondary and tertiary consumers, including cetaceans which may visit canyons for feeding and breeding. 
+Submarine canyons are major geomorphic features that function as dynamic flux routes for resources between continental shelves and ocean basins. As a result, canyons are one of the most productive and biodiverse habitats in the deep sea. Habitat heterogeneity and temporal variability are key features of submarine canyons, with the diversity of topographic and hydrodynamic features and substrate types (mud, sand, rocky walls) within and between canyons contributing to their highly diverse heterotrophic faunal assemblages. Photautotrophs are present only at the heads of some canyons. Canyons are characterized by meio-, macro- and mega-fauna assemblages with greater abundances and/or biomass than adjacent continental slopes (M3.1), due mainly to greater quality and quantity of food inside canyon systems. Habitat complexity and high resource availability make canyons important refuges, nurseries, spawning areas and regional source populations for fish, crustaceans and other benthic biota. Steep exposed rock and strong currents may facilitate development of dense communities of sessile predators and filter feeders such as cold-water corals and sponges, engineering complex three-dimensional habitats. Soft substrata favour high densities of pennatulids and detritivores such as echinoderms. The role of canyons as carbon depocentres makes them an extraordinary habitat for deep-sea deposit feeders, which represent the dominant mobile benthic trophic guild. The high productivity attracts pelagic-associated secondary and tertiary consumers, including cetaceans which may visit canyons for feeding and breeding.
 
 # Key-ecological-drivers
 
-Submarine canyons vary in their origin, length, depth range (mean 2000 m), hydrodynamics, sedimentation patterns and biota. Their complex topography modifies regional currents, inducing local upwelling, downwelling and other complex hydrodynamic processes (turbidity currents, dense shelf water cascading, internal waves). Through these processes, canyons act as geomorphic conduits of water masses, sediments and organic matter from the productive coastal shelf to deep basins. This is particularly evident in shelf-incising canyons directly affected by riverine inputs and other coastal processes. Complex hydrodynamic patterns enhance nutrient levels and food inputs mostly through downward lateral advection, but also by local upwelling, active biological transport by vertical migration of organisms and passive fall of organic flux of varied particles sizes. Differences among canyons are driven primarily by variation in abundance and quality of food sources, as well as finer scale drivers including the variability of water mass structure (i.e. turbidity, temperature, salinity and oxygen gradients), seabed geomorphology, depth and substratum. 
+Submarine canyons vary in their origin, length, depth range (mean 2000 m), hydrodynamics, sedimentation patterns and biota. Their complex topography modifies regional currents, inducing local upwelling, downwelling and other complex hydrodynamic processes (turbidity currents, dense shelf water cascading, internal waves). Through these processes, canyons act as geomorphic conduits of water masses, sediments and organic matter from the productive coastal shelf to deep basins. This is particularly evident in shelf-incising canyons directly affected by riverine inputs and other coastal processes. Complex hydrodynamic patterns enhance nutrient levels and food inputs mostly through downward lateral advection, but also by local upwelling, active biological transport by vertical migration of organisms and passive fall of organic flux of varied particles sizes. Differences among canyons are driven primarily by variation in abundance and quality of food sources, as well as finer scale drivers including the variability of water mass structure (i.e. turbidity, temperature, salinity and oxygen gradients), seabed geomorphology, depth and substratum.
 
 # Distribution
 
-Submarine canyons cover 11.2% of continental slopes, with 9000 large canyons recorded globally. Most of their extent is distributed below 200 m, with a mean depth of 2000 m. 
+Submarine canyons cover 11.2% of continental slopes, with 9000 large canyons recorded globally. Most of their extent is distributed below 200 m, with a mean depth of 2000 m.
 
 ## Map details
 
@@ -25,7 +25,6 @@ The indicative map of Submarine canyons was based on the ‘canyons’ geomorphi
 
 ## References
 ### Text references
-* Fernandez-Arcaya U, Ramirez-Llodra E, Aguzzi J, Allcock AL, Davies JS et al. (2017) Ecological role of submarine canyons and need for canyon conservation: a review. Frontiers in Marine Science 4: 5. 
+* Fernandez-Arcaya U, Ramirez-Llodra E, Aguzzi J, Allcock AL, Davies JS et al. (2017) Ecological role of submarine canyons and need for canyon conservation: a review. Frontiers in Marine Science 4: 5.
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
