--- a/_EFGs/M3.7.md
+++ b/_EFGs/M3.7.md
@@ -1,5 +1,5 @@
 ---
-name: M3.7 Chemosynthetically-based ecosystems / M3.7 Chemosynthetic-based ecosystems (CBE)
+name: M3.7 Chemosynthetic-based ecosystems (CBE)
 biome: M3 Deep sea floors
 realm: Marine
 code: M3.7
@@ -9,7 +9,7 @@ contributors: E Ramirez-Llodra / DA Keith
 
 # Ecological traits
 
-CBEs include 3 major types of habitats between bathyal and abyssal depths: 1) hydrothermal vents on mid-ocean ridges, back arc basins and active seamounts; 2) cold seeps on active and passive continental margins; and 3) large organic falls such as whale- or wood-falls. All these systems are characterised by microbial primary productivity through chemoautotrophy, which uses reduced compounds (such as H2S, CH4) as energy sources instead of light. Microbes form bacterial mats and occur in trophic symbiosis with most megafauna. The continuous source of energy and microbial symbiosis fuel high faunal biomass. However, specific environmental factors (high temperature gradients at vents, chemical toxicity, symbiosis dependence) result in low diversity and high endemism of highly specialised fauna.  Habitat structure comprises hard substrate on vent chimneys, and mostly biogenic substrate at seeps and food-falls. Most fauna is sessile or with low motility, and depends on the fluids emanating at vents and seeps, or chemicals produced by microbes on food-falls, and thus is spatially limited. Large tubeworms, shrimp, crabs, bivalves and gastropods dominate many hydrothermal vents, with marked biogeographic provinces. Tubeworms, mussels and decapod crustaceans often dominate cold seeps with demersal fish. These are patchy ecosystems where connectivity relies on dispersal of planktonic larvae. 
+CBEs include 3 major types of habitats between bathyal and abyssal depths: 1) hydrothermal vents on mid-ocean ridges, back arc basins and active seamounts; 2) cold seeps on active and passive continental margins; and 3) large organic falls such as whale- or wood-falls. All these systems are characterised by microbial primary productivity through chemoautotrophy, which uses reduced compounds (such as H2S, CH4) as energy sources instead of light. Microbes form bacterial mats and occur in trophic symbiosis with most megafauna. The continuous source of energy and microbial symbiosis fuel high faunal biomass. However, specific environmental factors (high temperature gradients at vents, chemical toxicity, symbiosis dependence) result in low diversity and high endemism of highly specialised fauna.  Habitat structure comprises hard substrate on vent chimneys, and mostly biogenic substrate at seeps and food-falls. Most fauna is sessile or with low motility, and depends on the fluids emanating at vents and seeps, or chemicals produced by microbes on food-falls, and thus is spatially limited. Large tubeworms, shrimp, crabs, bivalves and gastropods dominate many hydrothermal vents, with marked biogeographic provinces. Tubeworms, mussels and decapod crustaceans often dominate cold seeps with demersal fish. These are patchy ecosystems where connectivity relies on dispersal of planktonic larvae.
 
 # Key-ecological-drivers
 
@@ -28,4 +28,3 @@ The indicative map of Chemosynthetic-based ecosystems was based on the distribut
 * Tunnicliffe V, Juniper KS, Sibuet M (2003) Reducing environments of the deep-sea floor. In: Tyler PA (ed) Ecosystems of the World Vol 28 Ecosystems of the deep oceans, pp 81-110. Elsevier, London.
 ### Map References
 * ‘Plate lines and polygons’ data by USGS/ESRI (https://www.arcgis.com/home/item.html?id=f155b76c13c84f62864446847f1ae652, downloaded 5/5/2019)
-
