--- a/_EFGs/T1.3.md
+++ b/_EFGs/T1.3.md
@@ -1,5 +1,5 @@
 ---
-name: T1.3 Tropical/Subtropical montane rainforests / T1.3 Tropical-subtropical montane rainforests
+name: T1.3 Tropical/Subtropical montane rainforests
 biome: T1 Tropical-subtropical forests
 realm: Terrestrial
 code: T1.3
@@ -24,8 +24,11 @@ Humid tropical and subtropical regions in east Africa, east Madagascar, southeas
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
 ## References
-### Text references
-* Gradstein SR, Homeier J, Gansert D (2008) The tropical mountain forest – patterns and processes in a biodiversity hotspot. Biodiversity and Ecology Series 2. Göttingen, Centre for Biodiversity and Ecology. / Hamilton LS, Juvik JO, Scatena FN (1995) Tropical Montane Cloud Forests. Ecological Studies. 110. Springer-Verlag, Berlin.
-### Map References
-* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
 
+### Text references
+
+* Gradstein SR, Homeier J, Gansert D (2008) The tropical mountain forest – patterns and processes in a biodiversity hotspot. Biodiversity and Ecology Series 2. Göttingen, Centre for Biodiversity and Ecology. / Hamilton LS, Juvik JO, Scatena FN (1995) Tropical Montane Cloud Forests. Ecological Studies. 110. Springer-Verlag, Berlin.
+
+### Map References
+
+* Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
