--- a/_EFGs/T5.1.md
+++ b/_EFGs/T5.1.md
@@ -1,10 +1,10 @@
 ---
-name: T5.1 Semi-desert steppes / T5.1 Semi-desert steppe
+name: T5.1 Semi-desert steppes
 biome: T5 Deserts and semi-deserts
 realm: Terrestrial
 code: T5.1
 biomecode: T5
-contributors: 
+contributors:
 ---
 
 # Ecological traits
@@ -27,5 +27,4 @@ TEOW
 ### Text references
 * Eldridge DJ, Travers SK, Facelli AF, Facelli JM, Keith DA (2017) The Chenopod shrublands. In: Australian vegetation. (Ed. DA Keith), pp599-625. Cambridge University Press, Cambridge.
 ### Map References
-* 
-
+*
