--- a/_EFGs/F1.4.md
+++ b/_EFGs/F1.4.md
@@ -1,5 +1,5 @@
 ---
-name: F1.4 Monsoonal upland stream / F1.4 Monsoonal upland streams
+name: F1.4 Monsoonal upland streams
 biome: F1 Rivers and streams
 realm: Freshwater
 code: F1.4
@@ -28,4 +28,3 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Davies PM, Bunn SE, Hamilton SK (2008) Primary production in tropical streams and rivers. In: Tropical stream ecology (Ed. D Dudgeon), pp. 23–42. Academic Press, London. / de Carvalho RA., Tejerina-Garro FL. (2018) Headwater-river gradient: trait-based approaches show functional dissimilarities among tropical fish assemblages. Marine and Freshwater Research 69: 574-584.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
