--- a/_EFGs/F2.6.md
+++ b/_EFGs/F2.6.md
@@ -1,5 +1,5 @@
 ---
-name: F2.6 Permanent inland salt lakes / F2.6 Permanent salt lakes
+name: F2.6 Permanent salt lakes
 biome: F2 Lakes
 realm: Freshwater
 code: F2.6
@@ -28,4 +28,3 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Humayoun SB, Bano N, Hollibaugh JT (2003) Depth distribution of microbial diversity in Mono Lake, a meromictic soda lake in California. Applied and environmental microbiology 69:1030-1042. / Williams WD (1998) Salinity as a determinant of the structure of biological communities in salt lakes. Hydrobiologia 381:191-201.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
