--- a/_EFGs/F2.9.md
+++ b/_EFGs/F2.9.md
@@ -1,5 +1,5 @@
 ---
-name: F2.9 Geothermal wetlands / F2.9 Geothermal pools and wetlands
+name: F2.9 Geothermal pools and wetlands
 biome: F2 Lakes
 realm: Freshwater
 code: F2.9
@@ -28,4 +28,3 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Channing A (2018) A review of active hot-spring analogues of Rhynie: environments, habitats and ecosystems. Philosophical Transactions of the Royal Society B 373: 20160490. / Power JF, Carere CR, Lee CK, Wakerley GLJ, Evans DW, Button M, White D, Climo MD, Hinze AM, Morgan XC, McDonald IR, Cary SC, Stott MB (2018) Microbial biogeography of 925 geothermal springs in New Zealand. Nature Communications 9: 2876. [doi: 10.1038/s41467-018-05020-y]
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
