--- a/_EFGs/M1.7.md
+++ b/_EFGs/M1.7.md
@@ -1,5 +1,5 @@
 ---
-name: M1.7 Subtidal sandy bottoms / M1.7 Subtidal sand beds
+name: M1.7 Subtidal sand beds
 biome: M1 Marine shelves
 realm: Marine
 code: M1.7
@@ -28,4 +28,3 @@ These are ecosystem functional groups that are widespread through the global ext
 * Byers JE, Grabowski JH (2014) Soft-sediment communities. In: Marine community ecology and conservation (Eds. MD Bertness, JF Bruno, BR Silliman, JJ Stachowicz), pp227-249. Sinauer, Sunderland. / Snelgrove PVR (1999) Getting to the bottom of marine biodiversity: sedimentary habitats. Bioscience 49: 129-138.
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
