--- a/_EFGs/T1.1.md
+++ b/_EFGs/T1.1.md
@@ -1,5 +1,5 @@
 ---
-name: T1.1 Tropical/Subtropical lowland rainforests / T1.1 Tropical-subtropical lowland rainforests
+name: T1.1 Tropical/Subtropical lowland rainforests
 biome: T1 Tropical-subtropical forests
 realm: Terrestrial
 code: T1.1
@@ -24,8 +24,9 @@ Humid tropical and subtropical regions in central and west Africa, southeast Asi
 Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurrences of each ecosystem functional group were identified by consulting available ecoregion descriptions (https://www.worldwildlife.org/biome-categories/terrestrial-ecoregions), global and regional reviews (cited in respective reference sections of profiles), maps of relevant ecosystems, and experts.
 
 ## References
+
 ### Text references
 * Corlett RT, Primack RB (2011) Tropical Rain Forests: An ecological and biogeographical comparison. Second edition. Wiley-Blackwell, Chichester.
+
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
