--- a/_EFGs/T4.5.md
+++ b/_EFGs/T4.5.md
@@ -1,5 +1,5 @@
 ---
-name: T4.5 Temperate grasslands / T4.5 Temperate subhumid grasslands
+name: T4.5 Temperate subhumid grasslands
 biome: T4 Savannas and grasslands
 realm: Terrestrial
 code: T4.5
@@ -25,7 +25,6 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 
 ## References
 ### Text references
-* Gibson GJ (2009) Grasses and grassland ecology. Oxford University Press, Oxford. 
+* Gibson GJ (2009) Grasses and grassland ecology. Oxford University Press, Oxford.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
