--- a/_EFGs/T6.3.md
+++ b/_EFGs/T6.3.md
@@ -1,5 +1,5 @@
 ---
-name: T6.3 Polar tundra / T6.3 Polar tundra and deserts
+name: T6.3 Polar tundra and deserts
 biome: T6 Polar/alpine
 realm: Terrestrial
 code: T6.3
@@ -28,4 +28,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Crawford RMM (2013) Tundra-taiga biology. Chapter 4. Oxford University Press, Oxford. doi:10.1093/acprof:osobl/9780199559404.003.0004
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
