--- a/_EFGs/T7.1.md
+++ b/_EFGs/T7.1.md
@@ -1,5 +1,5 @@
 ---
-name: T7.1 Croplands / T7.1 Annual croplands
+name: T7.1 Annual croplands
 biome: T7 Intensive land use systems
 realm: Terrestrial
 code: T7.1
@@ -21,11 +21,14 @@ Tropical to temperate humid climatic zones or river flats in dry climates across
 
 ## Map details
 
-The indicative distribution of crop lands was estimated using the percentage cover of crop lands at 5' resolution from the Hyde 3.1 dataset (Klein Goldewijk & van Drecht 2006), with a threshold of 1% for minor occurrences and 10% for major occurrences. 
+The indicative distribution of crop lands was estimated using the percentage cover of crop lands at 5' resolution from the Hyde 3.1 dataset (Klein Goldewijk & van Drecht 2006), with a threshold of 1% for minor occurrences and 10% for major occurrences.
 
 ## References
-### Text references
-* Leff B, Ramankutty N, Foley JA (2004) Geographic distribution of major crops across the world. Global Biogeochemical Cycles 18(1), GB1009. / Ray DK., Foley JA (2013) Increasing global crop harvest frequency: recent trends and future directions. Environmental Research Letters 8(4): 044041.
-### Map References
-* Klein Goldewijk K, van Drecht G (2006) HYDE 3: current and historical population and land cover. Integrated modelling of global environmental change. An overview of IMAGE 2.4 (Eds AF Bouwman, T Kram K Klein Goldewijk), pp. 93–111. Netherlands Environmental Assessment Agency (MNP). Bilthoven, The Netherlands.
 
+### Text references
+
+* Leff B, Ramankutty N, Foley JA (2004) Geographic distribution of major crops across the world. Global Biogeochemical Cycles 18(1), GB1009. / Ray DK., Foley JA (2013) Increasing global crop harvest frequency: recent trends and future directions. Environmental Research Letters 8(4): 044041.
+
+### Map References
+
+* Klein Goldewijk K, van Drecht G (2006) HYDE 3: current and historical population and land cover. Integrated modelling of global environmental change. An overview of IMAGE 2.4 (Eds AF Bouwman, T Kram K Klein Goldewijk), pp. 93–111. Netherlands Environmental Assessment Agency (MNP). Bilthoven, The Netherlands.
