--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -19,9 +19,9 @@ These streams have flow regimes with high velocity and relatively low but reliab
 
 In steep to moderate terrain throughout the humid tropical and temperate zones, rarely extending to boreal latitudes.
 
-![image-title-here](../assets/maps/F1_1.png){ width=50% }
+![image-title-here](../assets/maps/F1_1.png){width=50%}
 
-<img src="../assets/maps/F1_1.png" width="100">
+<img src="../assets/maps/F1_1.png" width="100%">
 
 
 **Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
