--- a/_EFGs/F1.1.md
+++ b/_EFGs/F1.1.md
@@ -23,6 +23,10 @@ In steep to moderate terrain throughout the humid tropical and temperate zones, 
 
 <img src="../assets/maps/F1_1.png" width="100%">
 
+<img src="../assets/maps/F1_1.png" width="100">
+
+<img src="../assets/maps/F1_1.png" width="200">
+
 
 **Map details**: Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences of rivers and streams were identified by consulting available ecoregion descriptions (http://www.feow.org/),  global and regional reviews , maps of relevant ecosystems, and expertise of authors.
 
