plugin to test if file exists

--- a/_EFGs/F1.2.md
+++ b/_EFGs/F1.2.md
@@ -15,6 +15,15 @@ Lowland rivers are usually productive environments and often have complex trophi
 
 These rivers are distinguished by shallow gradients (typically <2°), with low turbulence, low to moderate flow velocity and high to very high flow volumes which are continuous, but may vary seasonally, depending on catchment area and precipitation. This combination of features is most common at low altitudes within 200 m of sea level and rarely occurs above 1500m. River channels are wide and sometimes deep, with mostly soft sediment substrates. They are dominated by depositional processes, and so turbidity may be high, at least periodically. Overbank flows increase turbulence and turbidity. Locally or temporally important erosional processes have a role in sediment redistribution and geomorphic dynamism of depositional features (e.g. braided channels, point bars). Nutrient levels are relatively high due to large catchments and riparian/floodplain inputs, but depend on catchment geochemistry. Oxygen and temperatures vary with climate and catchment features. For catchments with extensive peatlands, waters may be tannin-rich, poorly oxygenated, acidic and dark, reducing productivity.
 
+# Diagramatic assembly model
+
+{% capture fileExists %}{% file_exists assets/diagrams/{{ page.code }}.png %}{% endcapture %}
+{% if fileExists=="true" %}
+  {% include DAM.html %}
+{% else %}
+  No diagramatic assembly model available for this profile.
+{% endif %}
+
 # Distribution
 
 Permanent lowland rivers are distributed throughout tropical and temperate lowlands, very uncommon in arid subtropical –warm temperate zones and absent from boreal zones.
@@ -28,4 +37,3 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Tockner K, Malard, F, Ward JV (2000) An extension of the flood pulse concept. Hydrological Processes 14: 2861-2883.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
