--- a/_EFGs/M1.1.md
+++ b/_EFGs/M1.1.md
@@ -4,7 +4,7 @@ biome: M1 Marine shelves
 realm: Marine
 code: M1.1
 biomecode: M1
-contributors: 
+contributors:
 ---
 
 # Ecological traits
@@ -14,6 +14,10 @@ Seagrass meadows are important sources of organic matter, much of which is retai
 # Key-ecological-drivers
 
 Typically found in the subtidal zone on soft sedimentary substrates, but also occasionally on rocky substrates on low- to moderate-energy coastlines with low turbidity and on intertidal shorelines. Minimum water depth is determined mainly by wave orbital velocity, tidal exposure and wave energy (waves erode seagrass), while maximum depth is limited by the vertical diminution of light intensity in the water column. Seagrass growth can be limited by nitrogen and phosphorous availability, but in eutrophied waters high nutrient availability can lead to overgrowth of seagrasses by epiphytes and shading by algal blooms, leading to ecosystem collapse. Large storm events and associated wave action lead to seagrass loss.
+
+# Diagramatic assembly model
+
+{% include DAM.html %}
 
 # Distribution
 
@@ -28,4 +32,3 @@ Indicative maps of Seagrass meadows were obtained from Green & Short (2003).
 * De Boer WF (2007) Seagrass–sediment interactions, positive feedbacks and critical thresholds for occurrence: a review. Hydrobiologia 591: 5-24. / Orth RJ, Carruthers TJ, Dennison WC, Duarte CM, Fourqurean JW, Heck KL, Hughes AR, Kendrick GA, Kenworthy WJ, Olyarnik S, Short F (2006) A global crisis for seagrass ecosystems. Bioscience 56: 987-996.
 ### Map References
 * Green EP, Short FT (2003) World atlas of seagrasses. UNEP World Conservation Monitoring Centre. University of California Press, Berkeley. [map data from marine/WCMC_013_014_Seagrass_WMS]
-
