--- a/_EFGs/M1.2.md
+++ b/_EFGs/M1.2.md
@@ -19,19 +19,25 @@ Kelps are benthic brown macroalgae (order Laminariales) forming canopies that sh
 Kelp forests are limited by light, nutrients, salinity, temperature, and herbivory. Growth rates are limited by light and proximity to sediment sources. High nutrient requirements are met by terrestrial runoff or upwelling currents, although eutrophication can lead to transition to turf beds. Truncated thermal niches limit the occurrence of kelps in warm waters. Herbivory on holdfasts influences recruitment and can constrain reversals of trophic cascades, even when propagules are abundant. Kelp forests occur on hard substrates in the upper photic zone and rely on wave action and currents for oxygen. Currents also play important roles in dispersing propagules of kelps and associated organisms. Storms may dislodge kelps creating gaps that may be maintained by herbivores, or rapidly recolonized.
 
 
-# Distribution
+# Diagramatic assembly model
 
+{% include DAM.html %}
+
+# Distribution
 
 Nearshore rocky reefs to depths of 30 m in temperate and polar waters. Absent from warm tropical waters, but present in upwelling zones off Oman, Namibia, Peru and Galapagos.
 
 
 ## Map details
 
-Ecoregions with major and minor occurrences of Kelp forests were identified by overlaying a global map of kelp systems (Steneck et al. 2002) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).  
+Ecoregions with major and minor occurrences of Kelp forests were identified by overlaying a global map of kelp systems (Steneck et al. 2002) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
 ## References
-### Text references
-* Bennett S, Wernberg T, Anderson RJ, Bolton JJ et al. (2015) Canopy interactions and physical stress gradients in subtidal communities. Ecology Letters 18: 677–686. / Steneck RS, Graham MH, Bourque BJ, Corbett D et al. (2002) Kelp forest ecosystem: biodiversity, stability, resilience and their future. Environmental Conservation 29: 436–459.
-### Map References
-* Steneck RS, Graham MH, Bourque BJ, Corbett D, Erlandson JM, Estes JA, Tegner MJ (2002) Kelp forest ecosystems - biodiversity, stability, resilience and future. In: Environmental Conservation 29: 436–459. / Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
 
+### Text references
+
+* Bennett S, Wernberg T, Anderson RJ, Bolton JJ et al. (2015) Canopy interactions and physical stress gradients in subtidal communities. Ecology Letters 18: 677–686. / Steneck RS, Graham MH, Bourque BJ, Corbett D et al. (2002) Kelp forest ecosystem: biodiversity, stability, resilience and their future. Environmental Conservation 29: 436–459.
+
+### Map References
+
+* Steneck RS, Graham MH, Bourque BJ, Corbett D, Erlandson JM, Estes JA, Tegner MJ (2002) Kelp forest ecosystems - biodiversity, stability, resilience and future. In: Environmental Conservation 29: 436–459. / Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
