--- a/_EFGs/F2.5.md
+++ b/_EFGs/F2.5.md
@@ -15,6 +15,10 @@ Shallow ephemeral freshwater bodies are also known as depressions, playas, clay 
 
 Arid climates have highly variable hydrology. Episodic inundation after rain is relatively short (days to months) due to high evaporation rates and infiltration. Drainage systems are closed or nearly so, with channels or sheet inflow from flat, sparsely vegetated catchments. Inflows bring allochthonous organic matter and nutrients, and are typically turbid with fine particles. Clay-textured lake bottoms hold water by limiting percolation, but may include sand particles. Bottom sediments release nutrients rapidly after filling. The lakes are shallow and flat-bottomed with small volumes, so light and oxygen are generally not limiting. Persistent turbidity may limit light in the lake waters, but oxygen production by macrophytes and flocculation from increasing salinity during drying reduce turbidity over time. Shallow depth promotes high daytime water temperatures (when filling in summer) and high diurnal temperature variability.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Semi-arid and arid regions at mid latitudes of the Americas, Africa, west and Asia and Australia.
@@ -28,4 +32,3 @@ Freshwater ecoregions (Abell et al. 2008) containing major or minor occurrences 
 * Hancock MA, Timms BV (2002) Ecology of four turbid clay pans during a filling-drying cycle in the Paroo, semi-arid Australia. Hydrobiologia 479: 95-107. / Meintjes S (1996) Seasonal changes in the invertebrate community of small shallow ephemeral pans at Bain's Vlei, South Africa. Hydrobiologia 317: 51-64. / Williams WD (2000) Biodiversity in temporary wetlands of dryland regions. Internationale Vereinigung für theoretische und angewandte Limnologie: Verhandlungen 27: 141-144.
 ### Map References
 * Abell R, Thieme ML, Revenga C, Bryer M, Kottelat M, Bogutskaya N, Coad B, Mandrak N, Contreras Balderas S, Bussing W, Stiassny MLJ, Skelton P, Allen GR, Unmack P, Naseka A, Ng R, Sindorf N, Robertson J, Armijo E, Higgins JV, Heibel TJ, Wikramanayake E, Olson D, López HL, Reis RE, Lundberg JG, Sabaj Pérez MH, Petry P (2008)Freshwater ecoregions of the world: A new map of biogeographic units for freshwater biodiversity conservation, BioScience 58: 403–414.
-
