--- a/_EFGs/M1.4.md
+++ b/_EFGs/M1.4.md
@@ -19,6 +19,10 @@ These ecosystems are founded on intertidal or subtidal three-dimensional biogeni
  The availability of hard-substrate (including shell of live and dead conspecifics) can limit establishment of reef-forming shellfish, though a few occur on soft substrates. Many shellfish are robust to changes in salinity, closing their valves for days to weeks to avoid unfavourable conditions, but salinity may indirectly influence survival by determining susceptibility to parasites. High suspended sediment loads caused by high energy tides, rainfall and runoff events or erosion of coastal catchments can smother larvae, and impede filter feeding. Shellfish cannot survive prolonged periods of low dissolved oxygen; in subtidal environments formation of reefs can help to elevate animals above anoxic bottom waters. Relatively (or entirely) immobile and thin-shelled juveniles are highly susceptible to benthic predators such as crabs, fishes and birds, and recruitment to adult populations can be contingent on protective microhabitats provided either by abiogenic or biogenic structures. In intertidal environments, survival of shellfish can increase with density due to self-shading and moisture retention.
 
 
+ # Diagramatic assembly model
+
+ {% include DAM.html %}
+
 # Distribution
 
 
@@ -27,11 +31,14 @@ Estuarine and coastal waters of temperate and tropical regions, extending from s
 
 ## Map details
 
-Ecoregions with major and minor occurrences of Shellfish beds and reefs were identified by overlaying a global map of oyster reefs (Beck et al. 2011) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014). 
+Ecoregions with major and minor occurrences of Shellfish beds and reefs were identified by overlaying a global map of oyster reefs (Beck et al. 2011) on marine ecoregions (Spalding et al. 2008), and then clipping to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
 ## References
-### Text references
-* Beck MW, Brumbaugh RD, Airoldi L, Carranza A, Coen LD, Crawford C, Defeo O, Edgar GJ, Hancock B, Kay MC, Lenihan HS (2011) Oyster reefs at risk and recommendations for conservation, restoration and management. Bioscience 61:107-116. / Dame RF, Patten BC (1981) Analysis of energy flows in an intertidal oyster reef. Marine Ecology Progress Series 5:115-124.
-### Map References
-* Beck MW, Brumbaugh RD, Airoldi L, Carranza A,. Coen LD, Crawford C, Defeo O, Edgar GJ, Handcock B, Kay MC, Lenihan HS, Luckenbach M, Toropova CL, Zhang G, Guo X (2011) Oyster reefs at risk and recommendations for conservation, restoration, and management. BioScience 61: 107-116. / Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
 
+### Text references
+
+* Beck MW, Brumbaugh RD, Airoldi L, Carranza A, Coen LD, Crawford C, Defeo O, Edgar GJ, Hancock B, Kay MC, Lenihan HS (2011) Oyster reefs at risk and recommendations for conservation, restoration and management. Bioscience 61:107-116. / Dame RF, Patten BC (1981) Analysis of energy flows in an intertidal oyster reef. Marine Ecology Progress Series 5:115-124.
+
+### Map References
+
+* Beck MW, Brumbaugh RD, Airoldi L, Carranza A,. Coen LD, Crawford C, Defeo O, Edgar GJ, Handcock B, Kay MC, Lenihan HS, Luckenbach M, Toropova CL, Zhang G, Guo X (2011) Oyster reefs at risk and recommendations for conservation, restoration, and management. BioScience 61: 107-116. / Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
